# essa-automation-visualisation

./: config.yaml  data_process.py  ecar_full_analysis.py  evidence_analysis.py  evidence_rejection.py  functions.py  main.py  pyproject.toml  study_distribution_map.py
data/: regions.csv
src/: get_countries.py  process.py
